--- a/src/components/WidgetApps/styles.css
+++ b/src/components/WidgetApps/styles.css
@@ -2,14 +2,9 @@
     padding-top: 34px;
     width: 1080px;
     height: 502px;
-    left: 0px;
-    top: 0px;
-
     background: radial-gradient(97.31% 196.71% at 31.11% -16.24%, #FFFFFF 0%, #F4FDBF 100%);
-
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-
 }
 
 .row {
@@ -19,33 +14,25 @@
     float: left;
 }
 
-.list-app h1 {
-    width: 171px;
-    height: 2px;
-
-    font-family: 'Verdana';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 23px;
-    line-height: 2px;
-    letter-spacing: -0.1px;
-
-    color: #39444F;
+.list-app {
+    float: left;
 }
 
 .application {
     padding-left: 34px;
-}
-
-.list-app {
-    float: left;
+    width: 171px;
+    font-family: 'Verdana';
+    font-weight: 700;
+    font-size: 23px;
+    letter-spacing: -0.1px;
+    color: #39444F;
 }
 
 .list {
     padding-top: 40px;
 }
 
-.image-index {
+.image-main {
     float: right;
     padding-right: 0px;
     padding-top: 46.71px;
