--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -57,3 +57,14 @@ font-size: 20px;
     font-weight: bold;
 
 }
+
+.for-popap{
+    width: 129px;
+    height: 32px;
+    color:white;
+    font-size:medium;
+    margin-top: 30px;
+    
+
+
+}
