--- a/src/components/Button/styles.css
+++ b/src/components/Button/styles.css
@@ -1,29 +1,10 @@
-
 .continue {
-    /* Auto layout */
-
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     padding: 11px 20px;
-    gap: 4px;
-
-    width: 129px;
-    height: 42px;
-
-    /* Blue Primary */
-
     background: #478CC8;
     border-radius: 45px;
-
-    /* Inside auto layout */
-
-    flex: none;
-    order: 0;
-    flex-grow: 0;
 }
 
 .blue {
@@ -34,37 +15,29 @@
     background-color: #64B82A;
 }
 
-.red{
+.red {
     background-color: #D0021B;
 }
 
-.tiny-size{
-width: 75px;
-height: 28px;
-font-size: 16px;
+.tiny-size {
+    width: 75px;
+    height: 28px;
+    font-size: 16px;
 }
 
-.normal-size{
-width: 91px;
-height: 42px;
-font-size: 20px;
+.normal-size {
+    width: 100px;
+    height: 25px;
+    color: white;
+    font-size: 11px;
+    text-transform: uppercase;
+    margin-left: 75px;
+    cursor: pointer;
 }
 
-.big-size{
+.big-size {
     width: 143px;
     height: 48px;
-    font-size:26px;
+    font-size: 26px;
     font-weight: bold;
-
-}
-
-.for-popap{
-    width: 129px;
-    height: 32px;
-    color:white;
-    font-size:medium;
-    margin-top: 30px;
-    
-
-
 }
